# hrsyncx

./: LICENSE  pyproject.toml
docs/: configs.tex  main.tex  references.bib
src/hrsyncx/: experiments.py  hindmarsh_rose.py  initialize.py  plot.py  runge_kutta.py
src/hrsyncx/results/: fig1-200N_init-from-chaos.json  fig1-50N.json  fig2-200N_init-from-chaos.json
